--- a/src/com/bmazurkiewicz01/client/login.fxml
+++ b/src/com/bmazurkiewicz01/client/login.fxml
@@ -1,20 +1,26 @@
-
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+<?import java.net.*?>
 
 <VBox alignment="CENTER" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1"
       fx:controller="com.bmazurkiewicz01.client.controller.LoginController">
-    <TextField fx:id="loginField" alignment="CENTER" maxWidth="200">
+    <TextField promptText="Your name" focusTraversable="false" id="loginField" fx:id="loginField" alignment="CENTER" maxWidth="200">
         <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
         </VBox.margin>
     </TextField>
-    <Label fx:id="errorLabel" text="Label" visible="false"/>
-    <Button fx:id="loginButton" alignment="CENTER" onAction="#handleLoginButton" prefWidth="75.0" text="Login">
+    <Label fx:id="errorLabel" text="Label" visible="false" textFill="red"/>
+    <Button id="loginButton" defaultButton="true" fx:id="loginButton" alignment="CENTER" onAction="#handleLoginButton" prefWidth="75.0" text="Login">
         <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
         </VBox.margin>
     </Button>
+
+    <stylesheets>
+        <URL value="@../css/loginStyle.css"/>
+    </stylesheets>
 </VBox>
 
