Fixed css and improved UI

--- a/src/com/bmazurkiewicz01/client/css/loginStyle.css
+++ b/src/com/bmazurkiewicz01/client/css/loginStyle.css
@@ -1,4 +1,4 @@
-#loginField {
+.loginField {
     -fx-font-size: 18px;
     -fx-background-color: rgb(6,6,6);
     -fx-text-fill: #f4f4f4;
@@ -6,21 +6,6 @@
     -fx-border-width: 1;
     -fx-border-color: yellow;
 }
-#passwordField {
-    -fx-font-size: 18px;
-    -fx-background-color: rgb(6,6,6);
-    -fx-text-fill: #f4f4f4;
-    -fx-border-style: solid;
-    -fx-border-width: 1;
-    -fx-border-color: yellow;
-}
-
-#loginButton {
-    -fx-font-size: 18px;
-}
-#cancelButton {
-    -fx-font-size: 18px;
-}
-#registerButton {
+.loginButton {
     -fx-font-size: 18px;
 }
