--- a/src/com/bmazurkiewicz01/client/register.fxml
+++ b/src/com/bmazurkiewicz01/client/register.fxml
@@ -1,46 +1,50 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
-<?import java.net.*?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.PasswordField?>
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="com.bmazurkiewicz01.client.controller.RegisterController"
-      alignment="CENTER">
-    <TextField promptText="Name" focusTraversable="false" id="loginField" fx:id="loginField" alignment="CENTER"
-               maxWidth="200">
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+
+<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.RegisterController">
+   <Label text="Create an account">
+      <font>
+         <Font name="System Bold" size="26.0" />
+      </font>
+   </Label>
+   <Label text="It's quick and easy.">
+      <font>
+         <Font size="18.0" />
+      </font>
+      <padding>
+         <Insets bottom="20.0" />
+      </padding>
+   </Label>
+    <TextField fx:id="loginField" alignment="CENTER" focusTraversable="false" maxWidth="200" promptText="Name" styleClass="loginField">
         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
         </VBox.margin>
     </TextField>
-    <PasswordField promptText="Password" focusTraversable="false" id="passwordField" fx:id="passwordField"
-               alignment="CENTER" maxWidth="200">
+    <PasswordField fx:id="passwordField" alignment="CENTER" focusTraversable="false" maxWidth="200" promptText="Password" styleClass="loginField">
         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
         </VBox.margin>
     </PasswordField>
-    <Label fx:id="errorLabel" text="Label" visible="false" managed="false" textFill="red"/>
+    <Label fx:id="errorLabel" managed="false" text="Label" textFill="red" visible="false" />
     <HBox alignment="CENTER">
-        <Button id="loginButton" defaultButton="true" fx:id="registerButton" alignment="CENTER"
-                onAction="#handleRegisterButton" prefWidth="125.0" text="Register">
+        <Button fx:id="registerButton" alignment="CENTER" defaultButton="true" onAction="#handleRegisterButton" prefWidth="125.0" styleClass="loginButton" text="Register">
             <HBox.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </HBox.margin>
         </Button>
-        <Button id="cancelButton" fx:id="cancelButton" alignment="CENTER"
-                onAction="#handleCancelButton" prefWidth="90.0" text="Cancel">
+        <Button fx:id="cancelButton" alignment="CENTER" onAction="#handleCancelButton" prefWidth="90.0" styleClass="loginButton" text="Cancel">
             <HBox.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </HBox.margin>
         </Button>
     </HBox>
 
-
     <stylesheets>
-        <URL value="@css/loginStyle.css"/>
+        <URL value="@css/loginStyle.css" />
     </stylesheets>
 </VBox>
-
-
