--- a/src/com/bmazurkiewicz01/client/controller/addRoomDialog.fxml
+++ b/src/com/bmazurkiewicz01/client/controller/addRoomDialog.fxml
@@ -2,14 +2,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<DialogPane prefHeight="250.0" prefWidth="250.0"
+<DialogPane prefHeight="75.0" prefWidth="250.0"
             xmlns:fx="http://javafx.com/fxml" fx:controller="com.bmazurkiewicz01.client.controller.AddRoomDialogController">
    <content>
       <GridPane hgap="5" vgap="5">
           <Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
           <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-          <Label text="Owner" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-          <TextField fx:id="ownerField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+          <Label fx:id="errorLabel" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="2" managed="false" visible="false"/>
       </GridPane>
    </content>
 </DialogPane>
