--- a/src/com/bmazurkiewicz01/client/view/room.fxml
+++ b/src/com/bmazurkiewicz01/client/view/room.fxml
@@ -36,6 +36,6 @@
     </Label>
 
     <stylesheets>
-        <URL value="@css/roomStyle.css"/>
+        <URL value="@../css/roomStyle.css"/>
     </stylesheets>
 </GridPane>
