--- a/src/com/bmazurkiewicz01/client/view/room.fxml
+++ b/src/com/bmazurkiewicz01/client/view/room.fxml
@@ -6,36 +6,52 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane id="mainPane" alignment="CENTER" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.RoomController">
-    <Button fx:id="backButton" onAction="#handleBackButton" prefHeight="39.0" prefWidth="94.0" text="Go back"
-            GridPane.columnIndex="0" GridPane.rowIndex="0">
-        <font>
-            <Font size="18.0"/>
-        </font>
+<GridPane id="mainPane" alignment="CENTER" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.RoomController">
+
+    <Label fx:id="roomLabel" text="Room" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
         <GridPane.margin>
-            <Insets/>
+            <Insets left="5.0" />
         </GridPane.margin>
-    </Button>
-    <TextArea id="chatTextArea" fx:id="chatTextArea" editable="false" prefHeight="450.0" prefWidth="500.0"
-              GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="1"/>
-    <TextField id="messageField" fx:id="messageField" prefWidth="440" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-    <Button id="sendButton" fx:id="sendMessageButton" defaultButton="true" onAction="#handleSendMessageButton"
-            prefHeight="40" prefWidth="60" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-    <Label fx:id="errorLabel" textFill="red" visible="false" managed="false" GridPane.columnIndex="0" GridPane.columnSpan="2"
-           GridPane.rowIndex="3"/>
-    <ListView fx:id="usersListView" prefHeight="213.0" prefWidth="156.0" GridPane.columnIndex="2"
-              GridPane.rowIndex="1"/>
-    <Label text="Connected users:" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
         <font>
-            <Font size="19.0"/>
+            <Font size="18.0" />
         </font>
-        <GridPane.margin>
-            <Insets bottom="-20.0"/>
-        </GridPane.margin>
+    </Label>
+    <Label fx:id="ownerLabel" text="Owner" GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <font>
+            <Font size="18.0" />
+        </font>
     </Label>
 
+    <Button fx:id="backButton" onAction="#handleBackButton" prefHeight="39.0" prefWidth="94.0" text="Go back" GridPane.columnIndex="0" GridPane.rowIndex="0">
+        <font>
+            <Font size="18.0" />
+        </font>
+        <GridPane.margin>
+            <Insets />
+        </GridPane.margin>
+    </Button>
+    <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#handleLogoutButton" text="Logout" GridPane.columnIndex="1">
+        <font>
+            <Font size="18.0" />
+        </font>
+    </Button>
+
+    <Label text="Connected users:" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+        <font>
+            <Font size="19.0" />
+        </font>
+      <GridPane.margin>
+         <Insets />
+      </GridPane.margin>
+    </Label>
+    <ListView fx:id="usersListView" prefHeight="213.0" prefWidth="156.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+
+    <TextArea id="chatTextArea" fx:id="chatTextArea" editable="false" prefHeight="450.0" prefWidth="500.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+    <TextField id="messageField" fx:id="messageField" prefWidth="440" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+    <Button id="sendButton" fx:id="sendMessageButton" defaultButton="true" onAction="#handleSendMessageButton" prefHeight="40" prefWidth="60" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+    <Label fx:id="errorLabel" managed="false" textFill="red" visible="false" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+
     <stylesheets>
-        <URL value="@../css/roomStyle.css"/>
+        <URL value="@../css/roomStyle.css" />
     </stylesheets>
 </GridPane>
