--- a/src/com/bmazurkiewicz01/client/view/login.fxml
+++ b/src/com/bmazurkiewicz01/client/view/login.fxml
@@ -1,45 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.LoginController">
-    <ImageView fitHeight="160" fitWidth="220">
-        <image>
-            <Image url="@../icons/logo.png" />
-        </image>
-    </ImageView>
-    <TextField styleClass="loginField" fx:id="loginField" alignment="CENTER" focusTraversable="false" maxWidth="200" promptText="Name">
-        <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-        </VBox.margin>
-    </TextField>
-    <PasswordField styleClass="loginField" fx:id="passwordField" alignment="CENTER" focusTraversable="false" maxWidth="200" promptText="Password">
-        <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-        </VBox.margin>
-    </PasswordField>
-    <Label fx:id="errorLabel" managed="false" text="Label" textFill="red" visible="false" />
-    <Button styleClass="loginButton" fx:id="loginButton" alignment="CENTER" defaultButton="true" onAction="#handleLoginButton" prefWidth="75.0" text="Login">
-        <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-        </VBox.margin>
-    </Button>
-   <Separator prefHeight="20.0" prefWidth="220.0" maxWidth="220.0">
-      <VBox.margin>
-         <Insets left="10.0" right="10.0" />
-      </VBox.margin>
-   </Separator>
-    <Button styleClass="loginButton" fx:id="registerButton" alignment="CENTER" onAction="#handleRegisterButton" prefWidth="125.0" text="Register">
-        <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-        </VBox.margin>
-    </Button>
-
-    <stylesheets>
-        <URL value="@../css/loginStyle.css" />
-    </stylesheets>
-</VBox>
+<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.LoginController">
+    <children>
+      <VBox alignment="CENTER" layoutX="211.0" layoutY="42.0" prefHeight="548.0" prefWidth="400.0">
+         <children>
+              <ImageView fitHeight="290.0" fitWidth="338.0">
+                  <image>
+                      <Image url="@../icons/logo.png" />
+                  </image>
+              </ImageView>
+              <TextField fx:id="loginField" alignment="CENTER" focusTraversable="false" maxWidth="200" prefHeight="39.0" prefWidth="190.0" promptText="Name" styleClass="loginField">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </VBox.margin>
+            </TextField>
+              <PasswordField fx:id="passwordField" alignment="CENTER" focusTraversable="false" maxWidth="200" prefHeight="39.0" prefWidth="190.0" promptText="Password" styleClass="loginField">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </PasswordField>
+              <Label fx:id="errorLabel" alignment="CENTER" managed="false" prefHeight="24.0" prefWidth="214.0" textFill="red" visible="false" />
+              <Button fx:id="loginButton" alignment="CENTER" defaultButton="true" onAction="#handleLoginButton" prefWidth="75.0" styleClass="loginButton" text="Login">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Button>
+              <Separator maxWidth="220.0" prefHeight="20.0" prefWidth="220.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </VBox.margin></Separator>
+              <Button fx:id="registerButton" alignment="CENTER" onAction="#handleRegisterButton" prefWidth="125.0" styleClass="loginButton" text="Register">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+      </VBox>
+        <ImageView fx:id="closeButton" fitHeight="32.0" fitWidth="32.0" layoutX="753.0" layoutY="12.0">
+            <image>
+                <Image url="@../icons/closeIcon.png" />
+            </image>
+        </ImageView>
+      <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
+         <image>
+            <Image url="@../icons/minimizeIcon.png" />
+         </image>
+      </ImageView>
+    </children>
+   <stylesheets>
+      <URL value="@../css/appStyle.css" />
+      <URL value="@../css/loginStyle.css" />
+   </stylesheets>
+</AnchorPane>
