--- a/src/com/bmazurkiewicz01/client/view/register.fxml
+++ b/src/com/bmazurkiewicz01/client/view/register.fxml
@@ -1,50 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.RegisterController">
-   <Label text="Create an account">
-      <font>
-         <Font name="System Bold" size="26.0" />
-      </font>
-   </Label>
-   <Label text="It's quick and easy.">
-      <font>
-         <Font size="18.0" />
-      </font>
-      <padding>
-         <Insets bottom="20.0" />
-      </padding>
-   </Label>
-    <TextField fx:id="loginField" alignment="CENTER" focusTraversable="false" maxWidth="200" promptText="Name" styleClass="loginField">
-        <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-        </VBox.margin>
-    </TextField>
-    <PasswordField fx:id="passwordField" alignment="CENTER" focusTraversable="false" maxWidth="200" promptText="Password" styleClass="loginField">
-        <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-        </VBox.margin>
-    </PasswordField>
-    <Label fx:id="errorLabel" managed="false" text="Label" textFill="red" visible="false" />
-    <HBox alignment="CENTER">
-        <Button fx:id="registerButton" alignment="CENTER" defaultButton="true" onAction="#handleRegisterButton" prefWidth="125.0" styleClass="loginButton" text="Register">
-            <HBox.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </HBox.margin>
-        </Button>
-        <Button fx:id="cancelButton" alignment="CENTER" onAction="#handleCancelButton" prefWidth="90.0" styleClass="loginButton" text="Cancel">
-            <HBox.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </HBox.margin>
-        </Button>
-    </HBox>
-
-    <stylesheets>
-        <URL value="@../css/loginStyle.css" />
-    </stylesheets>
-</VBox>
+<AnchorPane styleClass="root" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.RegisterController">
+   <children>
+      <VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0">
+         <Label styleClass="headerLabel" text="Create an account">
+            <font>
+               <Font name="System Bold" size="26.0" />
+            </font>
+         </Label>
+         <Label styleClass="headerLabel" text="It's quick and easy.">
+            <font>
+               <Font size="18.0" />
+            </font>
+            <padding>
+               <Insets bottom="20.0" />
+            </padding>
+         </Label>
+          <TextField fx:id="loginField" alignment="CENTER" focusTraversable="false" maxWidth="200" promptText="Name" styleClass="registerField">
+              <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+              </VBox.margin>
+            <font>
+               <Font size="18.0" />
+            </font>
+          </TextField>
+          <PasswordField fx:id="passwordField" alignment="CENTER" focusTraversable="false" maxWidth="200" promptText="Password" styleClass="registerField">
+              <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+              </VBox.margin>
+            <font>
+               <Font size="18.0" />
+            </font>
+          </PasswordField>
+          <Label fx:id="errorLabel" managed="false" text="Label" textFill="red" visible="false" />
+          <HBox alignment="CENTER">
+              <Button fx:id="registerButton" alignment="CENTER" defaultButton="true" onAction="#handleRegisterButton" prefWidth="125.0" styleClass="registerButton" text="Register">
+                  <HBox.margin>
+                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </HBox.margin>
+               <font>
+                  <Font size="18.0" />
+               </font>
+              </Button>
+              <Button fx:id="cancelButton" alignment="CENTER" onAction="#handleCancelButton" prefWidth="125.0" styleClass="cancelButton" text="Cancel">
+                  <HBox.margin>
+                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </HBox.margin>
+               <font>
+                  <Font size="18.0" />
+               </font>
+              </Button>
+          </HBox>
+      </VBox>
+      <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
+         <image>
+            <Image url="@../icons/minimizeIcon.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="closeButton" fitHeight="32.0" fitWidth="32.0" layoutX="753.0" layoutY="12.0">
+         <image>
+            <Image url="@../icons/closeIcon.png" />
+         </image>
+      </ImageView>
+   </children>
+   <stylesheets>
+      <URL value="@../css/appStyle.css" />
+      <URL value="@../css/registerStyle.css" />
+   </stylesheets>
+</AnchorPane>
