Updated main view

--- a/src/com/bmazurkiewicz01/client/view/login.fxml
+++ b/src/com/bmazurkiewicz01/client/view/login.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.LoginController">
+<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.LoginController">
     <children>
       <VBox alignment="CENTER" layoutX="211.0" layoutY="42.0" prefHeight="548.0" prefWidth="400.0">
          <children>
