--- a/src/com/bmazurkiewicz01/client/view/room.fxml
+++ b/src/com/bmazurkiewicz01/client/view/room.fxml
@@ -1,28 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<GridPane id="mainPane" alignment="CENTER" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.RoomController">
+<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.RoomController">
+    <Pane layoutX="25.0" layoutY="75.0" prefHeight="506.0" prefWidth="684.0" styleClass="mainPane">
+        <children>
+            <HBox layoutX="210.0" prefHeight="27.0" prefWidth="474.0" style="-fx-background-radius: 0 25 0 0;">
+                <children>
 
-    <Label fx:id="roomLabel" text="Room" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-        <GridPane.margin>
-            <Insets left="5.0" />
-        </GridPane.margin>
-        <font>
-            <Font size="18.0" />
-        </font>
-    </Label>
-    <Label fx:id="ownerLabel" text="Owner" GridPane.columnIndex="1" GridPane.rowIndex="1">
-        <font>
-            <Font size="18.0" />
-        </font>
-    </Label>
+                    <Label fx:id="roomLabel" text="Room">
+                        <font>
+                            <Font size="18.0" />
+                        </font>
+                        <padding>
+                            <Insets left="2.0" right="10.0" />
+                        </padding>
+                    </Label>
+                    <Label fx:id="ownerLabel" text="Owner">
+                        <font>
+                            <Font size="18.0" />
+                        </font>
+                    </Label>
+                </children>
+            </HBox>
 
-    <Button fx:id="backButton" onAction="#handleBackButton" prefHeight="39.0" prefWidth="94.0" text="Go back" GridPane.columnIndex="0" GridPane.rowIndex="0">
+            <Label layoutX="25.0" styleClass="connectedUsersLabel" text="Connected users:" textFill="#010000">
+                <font>
+                    <Font size="19.0" />
+                </font>
+            </Label>
+            <Pane prefHeight="506.0" prefWidth="203.0" styleClass="usersPane" />
+
+            <TextArea fx:id="chatTextArea" editable="false" layoutX="212.0" layoutY="28.0" prefHeight="406.0" prefWidth="465.0" styleClass="chatTextArea" />
+            <Pane layoutX="213.0" layoutY="444.0" prefHeight="39.0" prefWidth="463.0" styleClass="messagePane">
+                <children>
+                    <TextField fx:id="messageField" prefHeight="0.0" prefWidth="403.0" styleClass="messageField" />
+                    <ImageView fitHeight="32.0" fitWidth="44.0" layoutX="411.0" layoutY="4.0">
+                        <image>
+                            <Image url="@../icons/sendIcon.png" />
+                        </image>
+                    </ImageView>
+                    <Button fx:id="sendMessageButton" defaultButton="true" layoutX="407.0" mnemonicParsing="false" onAction="#handleSendMessageButton" opacity="0.0" prefHeight="39.0" prefWidth="52.0" styleClass="sendMessageButton" />
+                </children>
+            </Pane>
+        </children>
+    </Pane>
+
+    <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
+        <image>
+            <Image url="@../icons/minimizeIcon.png" />
+        </image>
+    </ImageView>
+    <ImageView fx:id="closeButton" fitHeight="32.0" fitWidth="32.0" layoutX="753.0" layoutY="12.0">
+        <image>
+            <Image url="@../icons/closeIcon.png" />
+        </image>
+    </ImageView>
+
+    <Button fx:id="backButton" layoutX="444.0" layoutY="28.0" onAction="#handleBackButton" prefHeight="39.0" prefWidth="116.0" styleClass="goBackButton" text="Go back" GridPane.columnIndex="0" GridPane.rowIndex="0">
         <font>
             <Font size="18.0" />
         </font>
@@ -30,28 +78,16 @@
             <Insets />
         </GridPane.margin>
     </Button>
-    <Button fx:id="logoutButton" mnemonicParsing="false" onAction="#handleLogoutButton" text="Logout" GridPane.columnIndex="1">
+    <Button fx:id="logoutButton" layoutX="573.0" layoutY="28.0" mnemonicParsing="false" onAction="#handleLogoutButton" prefHeight="39.0" prefWidth="116.0" styleClass="logoutButton" text="Logout" GridPane.columnIndex="1">
         <font>
             <Font size="18.0" />
         </font>
     </Button>
-
-    <Label text="Connected users:" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
-        <font>
-            <Font size="19.0" />
-        </font>
-      <GridPane.margin>
-         <Insets />
-      </GridPane.margin>
-    </Label>
-    <ListView fx:id="usersListView" prefHeight="213.0" prefWidth="156.0" GridPane.columnIndex="2" GridPane.rowIndex="2"/>
-
-    <TextArea id="chatTextArea" fx:id="chatTextArea" editable="false" prefHeight="450.0" prefWidth="500.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-    <TextField id="messageField" fx:id="messageField" prefWidth="440" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-    <Button id="sendButton" fx:id="sendMessageButton" defaultButton="true" onAction="#handleSendMessageButton" prefHeight="40" prefWidth="60" GridPane.columnIndex="2" GridPane.rowIndex="3" />
     <Label fx:id="errorLabel" managed="false" textFill="red" visible="false" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-
+    <ListView fx:id="usersListView" layoutX="45.0" layoutY="100.0" prefHeight="455.0" prefWidth="160.0" styleClass="connectedUsersListView" />
     <stylesheets>
+        <URL value="@../css/appStyle.css" />
         <URL value="@../css/roomStyle.css" />
     </stylesheets>
-</GridPane>
+
+</AnchorPane>
