--- a/src/com/bmazurkiewicz01/client/view/addRoomDialog.fxml
+++ b/src/com/bmazurkiewicz01/client/view/addRoomDialog.fxml
@@ -1,14 +1,45 @@
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<DialogPane prefHeight="75.0" prefWidth="250.0"
-            xmlns:fx="http://javafx.com/fxml" fx:controller="com.bmazurkiewicz01.client.controller.AddRoomDialogController">
-   <content>
-      <GridPane hgap="5" vgap="5">
-          <Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-          <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="0" focusTraversable="false"/>
-          <Label fx:id="errorLabel" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="2" managed="false" visible="false"/>
-      </GridPane>
-   </content>
-</DialogPane>
+<AnchorPane fx:id="root" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="350.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.AddRoomDialogController">
+    <children>
+        <Button fx:id="addRoomButton" defaultButton="true" layoutX="39.0" layoutY="165.0" mnemonicParsing="false" onAction="#handleAddRoomButton" prefWidth="125.0" styleClass="addRoomButton" text="Add room">
+            <font>
+                <Font size="18.0" />
+            </font>
+        </Button>
+        <TextField fx:id="nameField" alignment="CENTER" focusTraversable="false" layoutX="63.0" layoutY="95.0" promptText="Room name" styleClass="nameField">
+            <font>
+                <Font size="18.0" />
+            </font>
+        </TextField>
+        <Button fx:id="cancelButton" layoutX="199.0" layoutY="165.0" mnemonicParsing="false" onAction="#handleCancelButton" prefWidth="125.0" styleClass="cancelButton" text="Cancel">
+            <font>
+                <Font size="18.0" />
+            </font>
+        </Button>
+        <Label fx:id="errorLabel" alignment="CENTER" layoutX="99.0" layoutY="142.0" minWidth="-Infinity" prefHeight="18.0" prefWidth="157.0" text="Label" textFill="RED" visible="false" />
+        <Label layoutX="88.0" layoutY="46.0" text="Add new room" textFill="#6c62ff">
+            <font>
+                <Font name="System Bold" size="25.0" />
+            </font>
+        </Label>
+      <ImageView fx:id="closeButton" fitHeight="32.0" fitWidth="32.0" layoutX="304.0" layoutY="8.0">
+         <image>
+            <Image url="@../icons/closeIcon.png" />
+         </image>
+      </ImageView>
+    </children>
+    <stylesheets>
+        <URL value="@../css/addRoomDialogStyle.css" />
+        <URL value="@../css/appStyle.css" />
+    </stylesheets>
+</AnchorPane>
