--- a/src/com/bmazurkiewicz01/client/view/main.fxml
+++ b/src/com/bmazurkiewicz01/client/view/main.fxml
@@ -11,55 +11,54 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.MainController">
-   <children>
-       <Button fx:id="logoutButton" layoutX="626.0" layoutY="188.0" onAction="#handleLogoutButton" prefHeight="39.0" prefWidth="116.0" styleClass="logoutButton" text="Logout">
-           <font>
-               <Font size="18.0" />
-           </font>
-       </Button>
-       <Button fx:id="addRoomButton" layoutX="626.0" layoutY="136.0" onAction="#handleAddRoomButton" prefHeight="39.0" prefWidth="116.0" styleClass="addRoomButton" text="Add room">
-           <font>
-               <Font size="18.0" />
-           </font>
-       </Button>
-       <TableView fx:id="roomTableView" layoutX="180.0" layoutY="136.0" onMouseClicked="#handleRowClick" prefHeight="366.0" prefWidth="420.0">
-           <columns>
-               <TableColumn fx:id="nameColumn" editable="false" minWidth="0.0" prefWidth="139.0" resizable="false" styleClass="roomTableColumn" text="Name">
-                   <cellValueFactory>
-                       <PropertyValueFactory property="name" />
-                   </cellValueFactory>
-               </TableColumn>
-               <TableColumn fx:id="ownerColumn" editable="false" minWidth="1.0" prefWidth="139.0" resizable="false" text="Owner">
-                   <cellValueFactory>
-                       <PropertyValueFactory property="owner" />
-                   </cellValueFactory>
-               </TableColumn>
-               <TableColumn fx:id="connectedColumn" editable="false" minWidth="1.0" prefWidth="139.0" resizable="false" text="Connected">
-                   <cellValueFactory>
-                       <PropertyValueFactory property="connected" />
-                   </cellValueFactory>
-               </TableColumn>
-           </columns>
-       </TableView>
-      <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
-         <image>
-            <Image url="@../icons/minimizeIcon.png" />
-         </image>
-      </ImageView>
-      <Label alignment="CENTER" layoutX="276.0" layoutY="56.0" prefHeight="58.0" prefWidth="227.0" styleClass="helloLabel" text="Hello, User!">
-         <font>
-            <Font size="28.0" />
-         </font>
-      </Label>
-      <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0">
-         <image>
-            <Image url="@../icons/closeIcon.png" />
-         </image>
-      </ImageView>
-   </children>
-   <stylesheets>
-      <URL value="@../css/appStyle.css" />
-      <URL value="@../css/mainStyle.css" />
-   </stylesheets>
+<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.MainController">
+    <stylesheets>
+        <URL value="@../css/appStyle.css" />
+        <URL value="@../css/mainStyle.css" />
+    </stylesheets>
+    <Button fx:id="logoutButton" layoutX="626.0" layoutY="188.0" onAction="#handleLogoutButton" prefHeight="39.0" prefWidth="116.0" styleClass="logoutButton" text="Logout">
+        <font>
+            <Font size="18.0" />
+        </font>
+    </Button>
+    <Button fx:id="addRoomButton" layoutX="626.0" layoutY="136.0" onAction="#handleAddRoomButton" prefHeight="39.0" prefWidth="116.0" styleClass="addRoomButton" text="Add room">
+        <font>
+            <Font size="18.0" />
+        </font>
+    </Button>
+    <TableView fx:id="roomTableView" layoutX="180.0" layoutY="136.0" onMouseClicked="#handleRowClick" prefHeight="366.0" prefWidth="420.0">
+        <columns>
+            <TableColumn fx:id="nameColumn" editable="false" minWidth="0.0" prefWidth="139.0" resizable="false" text="Name">
+                <cellValueFactory>
+                    <PropertyValueFactory property="name" />
+                </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="ownerColumn" editable="false" minWidth="1.0" prefWidth="139.0" resizable="false" text="Owner">
+                <cellValueFactory>
+                    <PropertyValueFactory property="owner" />
+                </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="connectedColumn" editable="false" minWidth="1.0" prefWidth="139.0" resizable="false" text="Connected">
+                <cellValueFactory>
+                    <PropertyValueFactory property="connected" />
+                </cellValueFactory>
+            </TableColumn>
+        </columns>
+    </TableView>
+    <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
+        <Image url="@../icons/minimizeIcon.png" />
+    </ImageView>
+    <Label fx:id="helloLabel" alignment="CENTER" layoutX="276.0" layoutY="56.0" prefHeight="58.0" prefWidth="227.0" styleClass="helloLabel" text="Hello, User!">
+        <font>
+          <Font size="28.0" />
+        </font>
+    </Label>
+    <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0">
+        <Image url="@../icons/closeIcon.png" />
+    </ImageView>
+    <Label fx:id="errorLabel" layoutX="180.0" layoutY="541.0" prefHeight="27.0" prefWidth="420.0" style="-fx-text-alignment: center; -fx-alignment: center;" text="Label" textFill="RED" visible="false">
+        <font>
+          <Font size="18.0" />
+        </font>
+    </Label>
 </AnchorPane>
