--- a/src/com/bmazurkiewicz01/client/css/registerStyle.css
+++ b/src/com/bmazurkiewicz01/client/css/registerStyle.css
@@ -10,7 +10,13 @@
     -fx-background-color: #3265ff;
     -fx-background-radius: 25;
 }
+.registerButton:hover {
+    -fx-background-color: #4173e0;
+}
 .cancelButton {
     -fx-background-color: #FF3232;
     -fx-background-radius: 25;
+}
+.cancelButton:hover {
+    -fx-background-color: #ff4444;
 }
