--- a/src/com/bmazurkiewicz01/client/view/addRoomDialog.fxml
+++ b/src/com/bmazurkiewicz01/client/view/addRoomDialog.fxml
@@ -32,7 +32,7 @@
                 <Font name="System Bold" size="25.0" />
             </font>
         </Label>
-      <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="303.0" layoutY="16.0">
+      <ImageView fx:id="closeButton" styleClass="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="303.0" layoutY="16.0">
          <image>
             <Image url="@../icons/closeIcon.png" />
          </image>
