--- a/src/com/bmazurkiewicz01/client/view/login.fxml
+++ b/src/com/bmazurkiewicz01/client/view/login.fxml
@@ -61,12 +61,12 @@
             <Insets />
          </opaqueInsets>
       </VBox>
-        <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0">
+        <ImageView fx:id="closeButton" styleClass="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0">
             <image>
                 <Image url="@../icons/closeIcon.png" />
             </image>
         </ImageView>
-      <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
+      <ImageView fx:id="minimizeButton" styleClass="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
          <image>
             <Image url="@../icons/minimizeIcon.png" />
          </image>
