--- a/src/com/bmazurkiewicz01/client/view/register.fxml
+++ b/src/com/bmazurkiewicz01/client/view/register.fxml
@@ -67,12 +67,12 @@
       </VBox>
       <ImageView fx:id="minimizeButton" styleClass="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
          <image>
-            <Image url="@../icons/minimizeIcon.png" />
+            <Image url="@../resources/minimizeIcon.png" />
          </image>
       </ImageView>
       <ImageView fx:id="closeButton" styleClass="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0">
          <image>
-            <Image url="@../icons/closeIcon.png" />
+            <Image url="@../resources/closeIcon.png" />
          </image>
       </ImageView>
    </children>
