--- a/src/com/bmazurkiewicz01/client/view/room.fxml
+++ b/src/com/bmazurkiewicz01/client/view/room.fxml
@@ -50,7 +50,7 @@
                     <TextField fx:id="messageField" prefHeight="0.0" prefWidth="403.0" styleClass="messageField" />
                     <ImageView styleClass="sendMessageImage" fitHeight="40.0" fitWidth="40.0" layoutX="414.0" layoutY="1.0">
                         <image>
-                            <Image url="@../icons/sendIcon.png" />
+                            <Image url="@../resources/sendIcon.png" />
                         </image>
                     </ImageView>
                     <Button fx:id="sendMessageButton" defaultButton="true" layoutX="409.0" mnemonicParsing="false" onAction="#handleSendMessageButton" opacity="0.0" prefHeight="39.0" prefWidth="52.0" styleClass="sendMessageButton" />
@@ -62,7 +62,7 @@
 
     <ImageView fx:id="minimizeButton" styleClass="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
         <image>
-            <Image url="@../icons/minimizeIcon.png" />
+            <Image url="@../resources/minimizeIcon.png" />
         </image>
     </ImageView>
 
@@ -82,7 +82,7 @@
     <ListView fx:id="usersListView" layoutX="45.0" layoutY="100.0" prefHeight="455.0" prefWidth="160.0" styleClass="connectedUsersListView" />
    <ImageView fx:id="closeButton" styleClass="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0">
       <image>
-         <Image url="@../icons/closeIcon.png" />
+         <Image url="@../resources/closeIcon.png" />
       </image>
    </ImageView>
     <stylesheets>
