--- a/src/com/bmazurkiewicz01/client/view/addUserAlert.fxml
+++ b/src/com/bmazurkiewicz01/client/view/addUserAlert.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
@@ -8,11 +9,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="350.0" styleClass="root" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.AddRoomAlertController">
+<AnchorPane fx:id="root" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="350.0" styleClass="root" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.AddUserAlertController">
 
 
     <stylesheets>
-        <URL value="@../css/addRoomAlertStyle.css" />
+        <URL value="@../css/addUserAlertStyle.css" />
         <URL value="@../css/appStyle.css" />
     </stylesheets>
    <children>
@@ -27,9 +28,9 @@
          </font>
       </Label>
       <Separator layoutX="15.0" layoutY="118.0" prefWidth="320.0" />
-      <Label fx:id="mainLabel" layoutX="14.0" layoutY="134.0" styleClass="mainLabel" text="Label">
+      <Label fx:id="mainLabel" layoutX="14.0" layoutY="134.0" styleClass="mainLabel" text="Default text" wrapText="true">
          <font>
-            <Font size="18.0" />
+            <Font size="15.0" />
          </font>
       </Label>
       <ImageView fitHeight="48.0" fitWidth="48.0" layoutX="279.0" layoutY="61.0">
@@ -37,5 +38,10 @@
             <Image url="@../resources/infoIcon.png" />
          </image>
       </ImageView>
+      <Button fx:id="confirmButton" layoutX="112.0" layoutY="176.0" mnemonicParsing="false" prefWidth="125.0" styleClass="confirmButton" text="OK">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
