--- a/src/com/bmazurkiewicz01/client/view/room.fxml
+++ b/src/com/bmazurkiewicz01/client/view/room.fxml
@@ -15,23 +15,23 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.RoomController">
+<AnchorPane fx:id="root" prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/11"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.RoomController">
     <Pane layoutX="25.0" layoutY="75.0" prefHeight="506.0" prefWidth="684.0" styleClass="mainPane">
         <children>
             <HBox layoutX="210.0" prefHeight="27.0" prefWidth="474.0" style="-fx-background-radius: 0 25 0 0;">
                 <children>
-
                     <Label fx:id="roomLabel" text="Room">
                         <font>
-                            <Font size="18.0" />
+                            <Font size="18.0"/>
                         </font>
                         <padding>
-                            <Insets left="2.0" right="10.0" />
+                            <Insets left="2.0" right="10.0"/>
                         </padding>
                     </Label>
                     <Label fx:id="ownerLabel" text="Owner">
                         <font>
-                            <Font size="18.0" />
+                            <Font size="18.0"/>
                         </font>
                     </Label>
                 </children>
@@ -39,55 +39,57 @@
 
             <Label layoutX="25.0" styleClass="connectedUsersLabel" text="Connected users:" textFill="#010000">
                 <font>
-                    <Font size="19.0" />
+                    <Font size="19.0"/>
                 </font>
             </Label>
-            <Pane prefHeight="506.0" prefWidth="203.0" styleClass="usersPane" />
+            <Pane prefHeight="506.0" prefWidth="203.0" styleClass="usersPane"/>
 
-            <TextArea fx:id="chatTextArea" editable="false" layoutX="212.0" layoutY="28.0" prefHeight="406.0" prefWidth="465.0" styleClass="chatTextArea" />
+            <TextArea fx:id="chatTextArea" editable="false" layoutX="212.0" layoutY="28.0" prefHeight="406.0"
+                      prefWidth="465.0" styleClass="chatTextArea"/>
             <Pane layoutX="213.0" layoutY="444.0" prefHeight="39.0" prefWidth="463.0" styleClass="messagePane">
                 <children>
-                    <TextField fx:id="messageField" prefHeight="0.0" prefWidth="403.0" styleClass="messageField" />
-                    <ImageView styleClass="sendMessageImage" fitHeight="40.0" fitWidth="40.0" layoutX="414.0" layoutY="1.0">
-                        <image>
-                            <Image url="@../resources/sendIcon.png" />
-                        </image>
-                    </ImageView>
-                    <Button fx:id="sendMessageButton" defaultButton="true" layoutX="409.0" mnemonicParsing="false" onAction="#handleSendMessageButton" opacity="0.0" prefHeight="39.0" prefWidth="52.0" styleClass="sendMessageButton" />
+                    <TextField fx:id="messageField" prefHeight="0.0" prefWidth="403.0" styleClass="messageField"/>
+                    <Button fx:id="sendMessageButton" defaultButton="true" layoutX="409.0" mnemonicParsing="false"
+                            onAction="#handleSendMessageButton" prefHeight="40.0" prefWidth="40.0"
+                            styleClass="sendMessageButton"/>
                 </children>
             </Pane>
-         <Label fx:id="errorLabel" layoutX="213.0" layoutY="487.0" prefHeight="17.0" prefWidth="463.0" style="-fx-alignment: center; -fx-text-alignment: center;" text="Error Label" textAlignment="CENTER" textFill="#6c0000" visible="false" />
+            <Label fx:id="errorLabel" layoutX="213.0" layoutY="487.0" prefHeight="17.0" prefWidth="463.0"
+                   style="-fx-alignment: center; -fx-text-alignment: center;" text="Error Label" textAlignment="CENTER"
+                   textFill="#6c0000" visible="false"/>
         </children>
     </Pane>
 
-    <ImageView fx:id="minimizeButton" styleClass="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0">
+    <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0"
+               styleClass="minimizeButton">
         <image>
-            <Image url="@../resources/minimizeIcon.png" />
+            <Image url="@../resources/minimizeIcon.png"/>
         </image>
     </ImageView>
 
-    <Button fx:id="backButton" layoutX="444.0" layoutY="28.0" onAction="#handleBackButton" prefHeight="39.0" prefWidth="116.0" styleClass="goBackButton" text="Go back" GridPane.columnIndex="0" GridPane.rowIndex="0">
+    <Button fx:id="backButton" layoutX="444.0" layoutY="28.0" onAction="#handleBackButton" prefHeight="39.0"
+            prefWidth="116.0" styleClass="goBackButton" text="Go back" GridPane.columnIndex="0" GridPane.rowIndex="0">
         <font>
-            <Font size="18.0" />
-        </font>
-        <GridPane.margin>
-            <Insets />
-        </GridPane.margin>
-    </Button>
-    <Button fx:id="logoutButton" layoutX="573.0" layoutY="28.0" mnemonicParsing="false" onAction="#handleLogoutButton" prefHeight="39.0" prefWidth="116.0" styleClass="logoutButton" text="Logout" GridPane.columnIndex="1">
-        <font>
-            <Font size="18.0" />
+            <Font size="18.0"/>
         </font>
     </Button>
-    <ListView fx:id="usersListView" layoutX="45.0" layoutY="100.0" prefHeight="455.0" prefWidth="160.0" styleClass="connectedUsersListView" />
-   <ImageView fx:id="closeButton" styleClass="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0">
-      <image>
-         <Image url="@../resources/closeIcon.png" />
-      </image>
-   </ImageView>
+    <Button fx:id="logoutButton" layoutX="573.0" layoutY="28.0" mnemonicParsing="false" onAction="#handleLogoutButton"
+            prefHeight="39.0" prefWidth="116.0" styleClass="logoutButton" text="Logout" GridPane.columnIndex="1">
+        <font>
+            <Font size="18.0"/>
+        </font>
+    </Button>
+    <ListView fx:id="usersListView" layoutX="45.0" layoutY="100.0" prefHeight="455.0" prefWidth="160.0"
+              styleClass="connectedUsersListView"/>
+    <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0"
+               styleClass="closeButton">
+        <image>
+            <Image url="@../resources/closeIcon.png"/>
+        </image>
+    </ImageView>
     <stylesheets>
-        <URL value="@../css/appStyle.css" />
-        <URL value="@../css/roomStyle.css" />
+        <URL value="@../css/appStyle.css"/>
+        <URL value="@../css/roomStyle.css"/>
     </stylesheets>
 
 </AnchorPane>
